<resources>
    <string name="app_name">Quizball</string>

    <!--Score Strings-->
    <string name="score">Score</string>
    <string name="defaultScore">0</string>

    <!--Question Strings-->
    <string name="question_1">1.) What is the capital of Syria? (15 points)</string>
    <string name="question_2">2.) Select all of the following college football coaches
                              who have won national championships in the CFP Era. (15 points)
    </string>
    <string name="question_3">3.) Which of the following teams plays in the AAC Conference of NCAA
                              Division 1 football? (10 points) </string>
    <string name="question_4">4.) What jersey number did Michael Jordan wear while playing
                              for the Chicago Bulls? (5 points)</string>

    <!--Answer Strings-->
    <string name="answer_hint">Answer</string>
    <!--Question 2 Answers-->
    <string name="dabo_swinney">Dabo Swinney</string>
    <string name="nick_saban">Nick Saban</string>
    <string name="urban_meyer">Urban Meyer</string>
    <string name="jim_harbaugh">Jim Harbaugh</string>
    <!--Question 3 Answers-->
    <string name="idaho">Idaho Vandals</string>
    <string name="ucf">UCF Knights</string>
    <string name="fau">FAU Owls</string>
    <string name="uab">UAB Blazers</string>

    <!--Submit String-->
    <string name="submit">Score My Quiz!</string>
    <string name="reset">Reset</string>
</resources>
